--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -255,10 +255,10 @@
 
         // AJAX post the data to the friends API.
         $.post("/api/friends", userData, function(data) {
-
+          console.log(JSON.stringify(data));
           // Grab the result from the AJAX post so that the best match's name and photo are displayed.
-          $("#match-name").text(data.name);
-          $("#match-img").attr("src", data.photo);
+          $("#match-name").text(data.matchName);
+          $("#match-img").attr("src", data.image);
 
           // Show the modal with the best match
           $("#results-modal").modal("toggle");
