--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,20 +11,23 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+  <link rel="stylesheet" href="./css/style.css">
+
   <!-- Font Awesome Glyphicons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <!-- Font Awesome kit's code -->
+    <script src="https://kit.fontawesome.com/a3532cd5dc.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
-  <div class="container">
+  <div class="container" >
 
-    <div class="jumbotron">
-      <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>
+    <div class="jumbotron" id="shadowsharp" style="background-image: url('./image/friends.jpg'); margin-top: 150px;">
+      <h1 style="color: tan;"><i style="color: indianred;" class="fas fa-puzzle-piece" aria-hidden="true"></i> Friend Finder</h1>
       <hr>
-      <h2>Answer a few basic questions. </h2>
-      <h2>Then find the friend with the greatest compatibility!</h2>
+      <h2>Make Friendship Easy!</h2>
       <br>
 
       <div>
@@ -35,7 +38,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/ngavu2712/FriendFinder">My GitHub Repo</a></p>
       </div>
     </footer>
 
